# ReportVision

./: .gitignore  .ruff.toml  README.md  REVIEW_GUIDELINES.md  dev-env.yaml  package-lock.json  phdc_document.xml  requirements.txt  user_guide.md
.github/: CODEOWNERS  (+2 more)
OCR/: .dockerignore  .gitignore  Dockerfile  NOTICE  README.md  azure_form_ex.py  benchmark_main.py  dev-dockerfile  dev-env.yaml  package-lock.json  package.json  pyproject.toml  segmentation_template_main.py
OCR/alignment/: __init__.py  image_homography.py  random_perspective_transform.py
OCR/docqa/: README.md  dev-dockerfile  main.py  pyproject.toml
OCR/docqa/public/assets/: style.css
OCR/frontend/: .gitignore  README.md  dev-dockerfile  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts
OCR/frontend/api/: api.ts
OCR/frontend/api/types/: types.ts
OCR/frontend/e2e/: App.spec.ts  ReviewTemplate.spec.ts
OCR/frontend/src/: App.scss  App.test.tsx  App.tsx  main.tsx
OCR/frontend/src/components/: Divider.tsx  ExtractDataHeader.tsx  ExtractUploadFile.tsx  FileInput.tsx  FilePreview.test.tsx  FilePreview.tsx  Header.tsx  ImageAnnotator.tsx  LoadingWrapper.tsx  UploadFile.tsx
OCR/frontend/src/componets/: ExtractUploadFile.tsx  Header.tsx  ImageAnnotator.tsx  Sidebar.tsx  Stepper.tsx  UploadFile.tsx
OCR/frontend/src/constants/: labels.ts
OCR/frontend/src/contexts/: AnnotationContext.test.tsx  AnnotationContext.tsx  FilesContesxt.test.tsx  FilesContext.tsx
OCR/frontend/src/pages/: AnnotateTemplate.scss  AnnotateTemplate.tsx  ExtractProcess.tsx  ExtractUpload.tsx  ReviewTemplate.scss  ReviewTemplate.tsx  SaveTemplate.test.tsx  SaveTemplate.tsx  UploadTemplate.test.tsx  UploadTemplate.tsx
OCR/frontend/src/style/: custom-styles.scss  index.scss  uswds-settings.scss
OCR/frontend/src/types/: models.ts  templates.ts
OCR/ocr/: api.py  azure_form_ex.py  checkbox_detector__subtraction_main.py  checkbox_detector_main.py  checkbox_detector_vision_main.py  main.py  metrics_main.py  ocr_example.py  pdf_extract.py  pdf_field_extractor_main.py  pdf_segmentor_main.py  phdc_conversion_main.py  pyinstaller.py
OCR/ocr/reportvision-dataset-1/: medical_report_import.py  tax_form_segmented_labels.json
OCR/ocr/services/: batch_metrics.py  batch_segmentation.py  checkbox_creator.py  checkbox_detector.py  checkbox_detector_image_extractor.py  checkbox_detector_subtraction.py  checkbox_image_align.py  extracted_elements.json  ground_truth.json  image_alignment.py  image_ocr.py  image_segmenter.py  metrics_analysis.py  pdf_field_extractor.py  pdf_field_extractor_old.py  pdf_image_conversion_script.py  segmentation_ui.py  split_image.py  tesseract_ocr.py
OCR/services/: image_segmenter.py
OCR/tests/: alignment_test.py  api_test.py  batch_metrics.py  batch_segmentation.py  bench_test.py  benchmark_main.py  benchmark_test.py  checkbox_detector_test.py  conftest.py  e2e_benchmark_test.py  extract_medical_report.py  medical_report_import.py  ocr_test.py  output.json  pdf_field_extractor_test.py  phdc_generator_test.py  seg_batch.py  segmentation_template_test.py  segmentation_template_tests.py  segmentation_ui.py
OCR/tests/assets/: declarationOfIndependence.txt  e2e_results_per.json  extracted_elements.json  ground_truth_ltbi_lab.json  ground_truth_mumps.json  ground_truth_pertusis.json  ground_truth_syp.json  labels.json  labels_hep_page1.json  labels_hep_page2.json  ocr_elements.json  ocr_metrics_test.py  ocr_values.json  output.json  per_example_marked_labels.json
backend/: Dockerfile  README.md  build.gradle.kts  dev-dockerfile  pyproject.toml  settings.gradle.kts
backend/reportvision/: crud.py  database.py  main.py  models.py  schema.py
(+285 files in other folders)
