[tool.poetry]
package-mode = false
name = "backend"
version = "0.1.0"
description = "Backend for ReportVision"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.112.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
pydantic = "^2.9.2"
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "reportvision.main:main"
api = "reportvision.api:start"
build = "reportvision.pyinstaller:install"

[tool.ruff]
line-length = 118
target-version = "py310"
